<resources>
    <string name="app_name">Studying Material Design</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="search_wiki">Find in Wikipedia</string>
    <string name="wiki_helper_text">Look for the term in Wikipedia</string>
    <string name="explanation_example">Still bright in planet Earth\'s night skies, good telescopic views of Saturn and its beautiful rings often make it a star at star parties. But this stunning view of Saturn\'s rings and night side just isn\'t possible from telescopes closer to the Sun than the outer planet. They can only bring Saturn\'s day into view. In fact, this image of Saturn\'s slender sunlit crescent with night\'s shadow cast across its broad and complex ring system was captured by the Cassini spacecraft. A robot spacecraft from planet Earth, Cassini called Saturn orbit home for 13 years before it was directed to dive into the atmosphere of the gas giant on September 15, 2017. This magnificent mosaic is composed of frames recorded by Cassini\'s wide-angle camera only two days before its grand final plunge. Saturn\'s night will not be seen again until another spaceship from Earth calls.</string>
    <string name="title_example">Saturn at Night</string>
    <string name="nasa">NASA</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="theme_category_title">Themes</string>
    <string name="description_of_themes_list">Choose theme</string>
    <string name="pod">Picture Of The Day</string>
    <string name="flr">Solar Flare</string>
    <string name="epic">Earth Polychromatic Imaging Camera</string>
    <string name="solar_flare">Solar Flare</string>
    <string name="solar_flare_startDate">Start Date:</string>
    <string name="solar_flare_peakDate">Peak Date:</string>
    <string name="solar_flare_endDate">End Date:</string>
    <string name="solar_flare_intensity">Intensity:</string>
    <string name="solar_flare_class">class</string>
    <string name="solar_flare_link">Link:</string>
</resources>